# playwrong

./: .gitignore  README.md  pyproject.toml  pytest.ini
tests/: conftest.py
tests/async_tests/: conftest.py  test_playwrong.py
tests/sync_tests/: conftest.py  test_playwrong.py
