[project]
name = "playwrong"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur",email = "arthurnalves@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.52.0,<2.0.0)",
    "pytest-playwright (>=0.7.0,<0.8.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest-playwright-asyncio (>=0.7.0,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"
mypy = "^1.15.0"

